Add Convex integration with Clerk authentication and update dependencies
- Introduced Convex functions directory with initial configuration files.
- Added environment configuration for Clerk and Convex.
- Updated package.json to include new dependencies: @clerk/nextjs, @t3-oss/env-nextjs, and others.
- Configured middleware for Clerk authentication.
- Enhanced Next.js configuration to support console removal in production.
- Added AppProvider and ConvexClientProviderWithClerk for context management.
- Included prettier configuration for consistent code formatting.
- Updated bun.lock with new dependencies and versions.

--- a/package.json
+++ b/package.json
@@ -4,24 +4,33 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "all": "concurrently \"npm run dev\" \"bunx convex dev\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.21.0",
+    "@t3-oss/env-nextjs": "^0.13.8",
+    "babel-plugin-react-compiler": "^19.1.0-rc.2",
+    "convex": "^1.24.8",
+    "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.3"
+    "zod": "^3.25.63"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "concurrently": "^9.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "@eslint/eslintrc": "^3"
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.12",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
