--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/elements": "^0.23.32",
     "@clerk/nextjs": "^6.21.0",
     "@clerk/themes": "^2.2.49",
+    "@convex-dev/react-query": "^0.0.0-alpha.8",
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -41,6 +42,7 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@t3-oss/env-nextjs": "^0.13.8",
+    "@tanstack/react-table": "^8.21.3",
     "babel-plugin-react-compiler": "^19.1.0-rc.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -52,6 +54,7 @@
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.4.3",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
